Fix align svg in button (Firefox)

--- a/source/less/blocks/cards.less
+++ b/source/less/blocks/cards.less
@@ -90,6 +90,7 @@
 }
 
 .card__button-stats {
+  display: flex;
   margin-right: 8px;
   padding: 0;
   appearance: none;
